Fix html a tag word-wrap issue

--- a/assets/_sass/_base.scss
+++ b/assets/_sass/_base.scss
@@ -326,3 +326,7 @@ article a.btn {
   cursor: -webkit-zoom-in;
   cursor: zoom-in;
 }
+
+a.vglnk {
+  word-wrap: break-word;
+}
